--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "google-auth-library": "^7.9.2",
+    "googleapis": "^87.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
     "pg": "^8.7.1",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
